--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,104 @@
+:root {
+    /* color values */
+    --white: white;
+    --black: black;
+
+    --night: #141514;
+    --jet: #2A2B2A;
+    --eggplant: #5e4955;
+    --violet: #996888;
+    --timberwolf: #ddd5d0;
+    --ashgray: #B8B8AA;
+}
+
+.darkmode {
+    --white: black;
+    --black: white;
+
+    --night: #141514;
+    --jet: #2A2B2A;
+    --eggplant: #5e4955;
+    --violet: #996888;
+    --timberwolf: #ddd5d0;
+    --ashgray: #B8B8AA;
+}
+
 * {
-    color: purple;
+    color: var(--timberwolf);
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box; 
+    
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 18px;
+}
+
+body {
+    background-color: var(--night);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+    padding: 1rem; 
+}
+
+main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#pastearea {
+    appearance: none;
+    background-color: #2A2B2A;
+    border-radius: 10px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #5e4955;
+    width: 100%;
+    max-width: 666px;
+    min-height: 1rem;
+    outline: none;
+    font-size: 1rem;
+    padding: 1rem;
+    line-height: 1.5;
+    transition: border-color .3s ease;
+}
+
+#pastearea:focus {
+    border-color: #996888;
+}
+
+.copy-area-control-button-wrapper {
+    width: 100%;
+    max-width: 666px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.copy-area-control-button-wrapper button {
+    color: var(--jet);
+    appearance: none;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: var(--violet);
+    transition: background-color .3s ease;
+}
+
+.copy-area-control-button-wrapper button:hover {
+    background-color: var(--eggplant);
+    cursor: pointer
 }
